# openclaw-mcp-agentic-lab

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: claude_desktop_config.example.json  openclaw.agent.md  openclaw.example.json5
docs/: ARCHITECTURE.md  INTERVIEW_TALK_TRACK.md  MCP_SECURITY.md  OPENCLAW_SETUP.md  PUBLISH_GITHUB.md  ROADMAP.md
examples/: demo_output.json  demo_request.md
scripts/: publish_to_github.sh
src/agentic_lab/: __init__.py  agents.py  api.py  cli.py  mcp_server.py  models.py  schemas.py  tools.py
tests/: test_orchestrator.py  test_tools.py
