[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-mcp-agentic-lab"
version = "0.1.0"
description = "Portfolio-grade OpenClaw + MCP + Claude/Ollama multi-agent AI showcase"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mohammad Abood" }]
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.64.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "mcp>=1.12.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    "typer>=0.12.3",
    "uvicorn>=0.30.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0"
]

[project.scripts]
agentic-lab = "agentic_lab.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
